[gd_scene load_steps=71 format=2]

[ext_resource path="res://src/levels/Level01.gd" type="Script" id=1]
[ext_resource path="res://src/UI/ItemList.gd" type="Script" id=2]
[ext_resource path="res://src/entities/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/environment/furniture/GenericFurniture.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/Time.gd" type="Script" id=5]
[ext_resource path="res://assets/textures/environment/furniture/fridge.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/environment/furniture/computer.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/environment/furniture/kitchen.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/environment/furniture/plant.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/environment/furniture/washingmachine.png" type="Texture" id=10]
[ext_resource path="res://src/entities/Child.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/environment/Furniture.gd" type="Script" id=12]
[ext_resource path="res://assets/textures/environment/whiteboard.png" type="Texture" id=13]
[ext_resource path="res://assets/textures/environment/full_bar.png" type="Texture" id=14]
[ext_resource path="res://src/UI/Control.gd" type="Script" id=15]
[ext_resource path="res://assets/textures/environment/empty_bar.png" type="Texture" id=16]
[ext_resource path="res://assets/textures/environment/background.png" type="Texture" id=17]
[ext_resource path="res://src/UI/TaskList.gd" type="Script" id=18]
[ext_resource path="res://assets/textures/environment/floor.png" type="Texture" id=19]
[ext_resource path="res://src/environment/Wall.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/sounds/typing.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/sounds/washing-machine.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/sounds/cooking.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/sounds/rain-06.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/fonts/DS-DIGII.TTF" type="DynamicFontData" id=25]
[ext_resource path="res://assets/textures/clock.png" type="Texture" id=26]
[ext_resource path="res://assets/textures/environment/furniture/food.png" type="Texture" id=27]
[ext_resource path="res://assets/textures/environment/furniture/clothesBasket.png" type="Texture" id=28]
[ext_resource path="res://assets/textures/environment/furniture/flower.png" type="Texture" id=29]
[ext_resource path="res://assets/textures/environment/furniture/postits.png" type="Texture" id=30]
[ext_resource path="res://assets/textures/animations/smoke1.png" type="Texture" id=31]
[ext_resource path="res://assets/textures/animations/smoke2.png" type="Texture" id=32]
[ext_resource path="res://assets/textures/animations/smoke4.png" type="Texture" id=33]
[ext_resource path="res://assets/textures/animations/smoke3.png" type="Texture" id=34]
[ext_resource path="res://assets/textures/animations/desk1.png" type="Texture" id=35]
[ext_resource path="res://assets/textures/animations/desk2.png" type="Texture" id=36]
[ext_resource path="res://assets/textures/animations/desk4.png" type="Texture" id=37]
[ext_resource path="res://assets/textures/animations/desk3.png" type="Texture" id=38]
[ext_resource path="res://assets/textures/animations/washing3.png" type="Texture" id=39]
[ext_resource path="res://assets/textures/animations/washing1.png" type="Texture" id=40]
[ext_resource path="res://assets/textures/animations/washing2.png" type="Texture" id=41]
[ext_resource path="res://assets/textures/animations/washing13.png" type="Texture" id=42]
[ext_resource path="res://assets/textures/animations/washing5.png" type="Texture" id=43]
[ext_resource path="res://assets/textures/animations/washing6.png" type="Texture" id=44]
[ext_resource path="res://assets/textures/animations/washing4.png" type="Texture" id=45]
[ext_resource path="res://assets/textures/animations/washing11.png" type="Texture" id=46]
[ext_resource path="res://assets/textures/animations/washing8.png" type="Texture" id=47]
[ext_resource path="res://assets/textures/animations/washing12.png" type="Texture" id=48]
[ext_resource path="res://assets/textures/animations/washing10.png" type="Texture" id=49]
[ext_resource path="res://assets/textures/animations/washing9.png" type="Texture" id=50]
[ext_resource path="res://assets/textures/animations/washing7.png" type="Texture" id=51]
[ext_resource path="res://assets/textures/animations/washing26.png" type="Texture" id=52]
[ext_resource path="res://assets/textures/animations/washing23.png" type="Texture" id=53]
[ext_resource path="res://assets/textures/animations/washing16.png" type="Texture" id=54]
[ext_resource path="res://assets/textures/animations/washing19.png" type="Texture" id=55]
[ext_resource path="res://assets/textures/animations/washing17.png" type="Texture" id=56]
[ext_resource path="res://assets/textures/animations/washing22.png" type="Texture" id=57]
[ext_resource path="res://assets/textures/animations/washing15.png" type="Texture" id=58]
[ext_resource path="res://assets/textures/animations/washing21.png" type="Texture" id=59]
[ext_resource path="res://assets/textures/animations/washing25.png" type="Texture" id=60]
[ext_resource path="res://assets/textures/animations/washing24.png" type="Texture" id=61]
[ext_resource path="res://assets/textures/animations/washing14.png" type="Texture" id=62]
[ext_resource path="res://assets/textures/animations/washing27.png" type="Texture" id=63]
[ext_resource path="res://assets/textures/animations/washing18.png" type="Texture" id=64]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 511, 23.5 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 37 ) ],
"loop": true,
"name": "computer",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 33 ) ],
"loop": true,
"name": "smoke",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 39 ), ExtResource( 39 ), ExtResource( 45 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 51 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 49 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 42 ), ExtResource( 62 ), ExtResource( 58 ), ExtResource( 54 ), ExtResource( 56 ), ExtResource( 64 ), ExtResource( 55 ), ExtResource( 59 ), ExtResource( 57 ), ExtResource( 53 ), ExtResource( 61 ), ExtResource( 60 ), ExtResource( 52 ), ExtResource( 63 ) ],
"loop": true,
"name": "washing",
"speed": 50.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 22
outline_size = 1
font_data = ExtResource( 25 )

[sub_resource type="GDScript" id=7]
script/source = "extends Label

"

[node name="Level01" type="Node"]
script = ExtResource( 1 )

[node name="Background2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 17 )
expand = true

[node name="Environment" type="Node2D" parent="."]

[node name="Floor2" type="StaticBody2D" parent="Environment"]
position = Vector2( 510, 581 )
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Floor2"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Environment/Floor2"]
scale = Vector2( 1.11694, 0.868421 )
texture = ExtResource( 19 )

[node name="LeftWall2" parent="Environment" instance=ExtResource( 20 )]

[node name="RightWall2" parent="Environment" instance=ExtResource( 20 )]
position = Vector2( 1024, 301 )

[node name="Entities" type="Node2D" parent="Environment"]

[node name="Fridge" type="Sprite" parent="Environment/Entities"]
position = Vector2( 942, 467 )
scale = Vector2( 0.314453, 0.353516 )
texture = ExtResource( 6 )

[node name="Furniture" type="Node2D" parent="Environment/Entities"]
script = ExtResource( 12 )
genericFurnitureScene = ExtResource( 4 )

[node name="Desk" parent="Environment/Entities/Furniture" instance=ExtResource( 4 )]
position = Vector2( 128, 471 )
texture = ExtResource( 7 )
tasks = [ "Asistir a reunion laboral" ]
probability = 30
sound = ExtResource( 21 )

[node name="TaskFinishedSprite" type="Sprite" parent="Environment/Entities/Furniture/Desk"]
visible = false
position = Vector2( 85.7417, -160.627 )
scale = Vector2( 0.169856, 0.171569 )
texture = ExtResource( 30 )

[node name="Animation" type="AnimatedSprite" parent="Environment/Entities/Furniture/Desk"]
visible = false
position = Vector2( -2.44977, -150.588 )
frames = SubResource( 10 )
animation = "computer"
frame = 1
playing = true

[node name="Kitchen" parent="Environment/Entities/Furniture" instance=ExtResource( 4 )]
position = Vector2( 768, 467 )
id = 2
texture = ExtResource( 8 )
tasks = [ "Preparar almuerzo" ]
probability = 40
sound = ExtResource( 23 )

[node name="TaskFinishedSprite" type="Sprite" parent="Environment/Entities/Furniture/Kitchen"]
visible = false
position = Vector2( 183.733, -42.667 )
scale = Vector2( 0.212919, 0.205883 )
texture = ExtResource( 27 )

[node name="Animation" type="AnimatedSprite" parent="Environment/Entities/Furniture/Kitchen"]
visible = false
position = Vector2( -120.039, -326.273 )
scale = Vector2( 0.469121, 0.40529 )
frames = SubResource( 9 )
animation = "smoke"
frame = 3
playing = true

[node name="Plant" parent="Environment/Entities/Furniture" instance=ExtResource( 4 )]
position = Vector2( 269, 510 )
scale = Vector2( 0.2, 0.2 )
id = 3
texture = ExtResource( 9 )
sound = ExtResource( 24 )

[node name="TaskFinishedSprite" type="Sprite" parent="Environment/Entities/Furniture/Plant"]
visible = false
position = Vector2( -95, -135 )
scale = Vector2( 0.304688, 0.265625 )
texture = ExtResource( 29 )

[node name="WashingMachine" parent="Environment/Entities/Furniture" instance=ExtResource( 4 )]
position = Vector2( 591, 497 )
scale = Vector2( 0.25, 0.25 )
id = 4
texture = ExtResource( 10 )
tasks = [ null ]
probability = 60
sound = ExtResource( 22 )

[node name="TaskFinishedSprite" type="Sprite" parent="Environment/Entities/Furniture/WashingMachine"]
visible = false
position = Vector2( 52, -336 )
scale = Vector2( 0.382812, 0.421875 )
texture = ExtResource( 28 )

[node name="Animation" type="AnimatedSprite" parent="Environment/Entities/Furniture/WashingMachine"]
position = Vector2( 59.4305, 58 )
scale = Vector2( 2.35573, 2.32653 )
frames = SubResource( 11 )
animation = "washing"
frame = 22
playing = true

[node name="Child" parent="Environment/Entities" instance=ExtResource( 11 )]
position = Vector2( 385, 497 )

[node name="Player" parent="Environment/Entities" instance=ExtResource( 3 )]
position = Vector2( 488, 455 )
z_index = 1

[node name="TaskList" type="TextureRect" parent="."]
margin_left = 71.0
margin_top = 70.0
margin_right = 371.0
margin_bottom = 370.0
mouse_filter = 2
texture = ExtResource( 13 )
expand = true
script = ExtResource( 18 )

[node name="ItemsList" type="VBoxContainer" parent="TaskList"]
margin_left = 31.0
margin_top = 24.0
margin_right = 276.0
margin_bottom = 212.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Time" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Time"]
position = Vector2( 790, 234 )
scale = Vector2( 0.24, 0.234 )
texture = ExtResource( 26 )

[node name="Countdown" type="Timer" parent="Time"]
autostart = true

[node name="TimeLeft" type="Label" parent="Time"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 750.0
margin_top = 199.0
margin_right = 831.0
margin_bottom = 267.0
custom_colors/font_color = Color( 0.658824, 0.113725, 0.113725, 1 )
custom_fonts/font = SubResource( 8 )
text = "tiempo"
align = 1
valign = 1
script = SubResource( 7 )

[node name="StressBar" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 15 )
stress_bar_path = NodePath("TextureProgress")

[node name="TextureProgress" type="TextureProgress" parent="StressBar"]
margin_left = 403.0
margin_top = 6.0
margin_right = 675.0
margin_bottom = 28.0
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 14 )
nine_patch_stretch = true

[connection signal="input_event" from="Environment/Floor2" to="Environment/Entities/Player" method="_on_Floor2_input_event"]
[connection signal="body_exited" from="Environment/Entities/Furniture/Desk" to="Environment/Entities/Child" method="_on_furniture_body_exited"]
[connection signal="input_event" from="Environment/Entities/Furniture/Desk" to="." method="_on_GenericFurniture_input_event"]
[connection signal="task_finished" from="Environment/Entities/Furniture/Desk" to="." method="_on_GenericFurniture_task_finished"]
[connection signal="task_finished" from="Environment/Entities/Furniture/Desk" to="Environment/Entities/Child" method="_on_task_finished"]
[connection signal="task_in_progress" from="Environment/Entities/Furniture/Desk" to="Environment/Entities/Child" method="_on_task_in_progress"]
[connection signal="body_exited" from="Environment/Entities/Furniture/Kitchen" to="Environment/Entities/Child" method="_on_furniture_body_exited"]
[connection signal="input_event" from="Environment/Entities/Furniture/Kitchen" to="." method="_on_GenericFurniture_input_event"]
[connection signal="task_finished" from="Environment/Entities/Furniture/Kitchen" to="." method="_on_GenericFurniture_task_finished"]
[connection signal="task_finished" from="Environment/Entities/Furniture/Kitchen" to="Environment/Entities/Child" method="_on_task_finished"]
[connection signal="task_in_progress" from="Environment/Entities/Furniture/Kitchen" to="Environment/Entities/Child" method="_on_task_in_progress"]
[connection signal="body_exited" from="Environment/Entities/Furniture/Plant" to="Environment/Entities/Child" method="_on_furniture_body_exited"]
[connection signal="input_event" from="Environment/Entities/Furniture/Plant" to="." method="_on_GenericFurniture_input_event"]
[connection signal="task_finished" from="Environment/Entities/Furniture/Plant" to="." method="_on_GenericFurniture_task_finished"]
[connection signal="task_finished" from="Environment/Entities/Furniture/Plant" to="Environment/Entities/Child" method="_on_task_finished"]
[connection signal="task_in_progress" from="Environment/Entities/Furniture/Plant" to="Environment/Entities/Child" method="_on_task_in_progress"]
[connection signal="body_exited" from="Environment/Entities/Furniture/WashingMachine" to="Environment/Entities/Child" method="_on_furniture_body_exited"]
[connection signal="input_event" from="Environment/Entities/Furniture/WashingMachine" to="." method="_on_GenericFurniture_input_event"]
[connection signal="task_finished" from="Environment/Entities/Furniture/WashingMachine" to="." method="_on_GenericFurniture_task_finished"]
[connection signal="task_finished" from="Environment/Entities/Furniture/WashingMachine" to="Environment/Entities/Child" method="_on_task_finished"]
[connection signal="task_in_progress" from="Environment/Entities/Furniture/WashingMachine" to="Environment/Entities/Child" method="_on_task_in_progress"]
[connection signal="crying" from="Environment/Entities/Child" to="." method="_on_Child_crying"]
[connection signal="player_baby_toggle" from="Environment/Entities/Child" to="." method="_on_Child_player_baby_toggle"]
[connection signal="player_baby_toggle" from="Environment/Entities/Child" to="Environment/Entities/Player" method="_on_Child_player_baby_toggle"]
[connection signal="set_player_target" from="Environment/Entities/Child" to="." method="_on_Child_set_player_target"]
[connection signal="victory" from="TaskList/ItemsList" to="." method="_on_ItemsList_victory"]
[connection signal="game_over" from="Time" to="." method="_on_Time_game_over"]
[connection signal="timeout" from="Time/Countdown" to="Time" method="_on_Countdown_timeout"]
[connection signal="timeout" from="Time/Countdown" to="StressBar" method="_on_Countdown_timeout"]
[connection signal="change_stress_signs" from="StressBar" to="." method="_on_StressBar_change_stress_signs"]
[connection signal="game_over" from="StressBar" to="." method="_on_StressBar_game_over"]
